[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Player-down.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.74194, 4.67742 )

[sub_resource type="Animation" id=4]
resource_name = "Fallen"
length = 1.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Falling"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -90.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.500001, -0.499999 )
scale = Vector2( 3.1, 3.1 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 2.5

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Fallen = SubResource( 4 )
anims/Falling = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Rotator" type="Node2D" parent="."]
visible = false

[node name="Shoot_point" type="Position2D" parent="Rotator"]
position = Vector2( 8, -1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.500001, -0.499999 )
scale = Vector2( 3.1, 3.1 )
shape = SubResource( 1 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
